martin-mbtiles/tests/snapshots/mbtiles__copy_and_convert@cp-no_agg__hash.snap
---
source: martin-mbtiles/tests/mbtiles.rs
expression: result
---
[[]]
type = 'table'
tbl_name = 'metadata'
sql = '''
CREATE TABLE metadata (
             name text NOT NULL PRIMARY KEY,
             value text)'''
values = [
    '(  "md-edit", "value - v1"  )',
    '(  "md-remove", "value - remove"  )',
    '(  "md-same", "value - same"  )',
]

[[]]
type = 'table'
tbl_name = 'tiles_with_hash'
sql = '''
CREATE TABLE tiles_with_hash (
             zoom_level integer NOT NULL,
             tile_column integer NOT NULL,
             tile_row integer NOT NULL,
             tile_data blob,
             tile_hash text,
             PRIMARY KEY(zoom_level, tile_column, tile_row))'''
values = [
    '(  1, 0, 0, blob(same), "51037A4A37730F52C8732586D3AAA316"  )',
    '(  1, 0, 1, blob(edit-v1), "EFE0AE5FD114DE99855BC2838BE97E1D"  )',
    '(  1, 1, 1, blob(remove), "0F6969D7052DA9261E31DDB6E88C136E"  )',
    '(  2, 0, 0, blob(z2-same), "6F75FF79F5F1B1B50092156993AAAA70"  )',
    '(  2, 0, 1, blob(z2-edit-v1), "EF0200E805A812D1A756F8E6B62BDFD4"  )',
    '(  2, 1, 1, blob(z2-remove), "625803A8AA8863AD897EA2F3716FB6D7"  )',
]

[[]]
type = 'index'
tbl_name = 'metadata'

[[]]
type = 'index'
tbl_name = 'tiles_with_hash'

[[]]
type = 'view'
tbl_name = 'tiles'
sql = '''
CREATE VIEW tiles AS
             SELECT zoom_level, tile_column, tile_row, tile_data FROM tiles_with_hash'''
